--- a/compose.yml
+++ b/compose.yml
@@ -5,16 +5,16 @@ services:
   nginx:
     image: nginx:stable-alpine
     container_name: ${CONTAINER_NAME}-nginx
+    restart: unless-stopped
     env_file: .env
     ports:
       - "8088:80"
     volumes:
-      - ./src:/var/www/html:delegated
+      - ./wordpress:/var/www/html:delegated
       - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
       - ./nginx/logs:/var/log/nginx
     depends_on:
-      - php
-      - database
+      - wordpress
     networks:
       - internal
 
@@ -38,26 +38,35 @@ services:
     networks:
       - internal
 
-  php:
-    build: 
-      context: .
-      dockerfile: php.dockerfile
-    container_name: ${CONTAINER_NAME}-php
-    env_file: .env
-    volumes:
-      - ./src:/var/www/html:delegated
-    networks:
-      - internal
-
   phpmyadmin:
     container_name: ${CONTAINER_NAME}-phpmyadmin
     image: phpmyadmin/phpmyadmin
     env_file: .env
+    depends_on:
+      - database
     environment:
       PMA_HOST: database
       PMA_PORT: 3306
       MYSQL_ROOT_PASSWORD: "${MYSQL_ROOT_PASSWORD}"
     ports:
       - "8081:80"
+    networks:
+      - internal
+
+  wordpress:
+    depends_on:
+      - database
+    container_name: ${CONTAINER_NAME}-wordpress
+    image: wordpress:6.5.2-fpm-alpine
+    restart: unless-stopped
+    env_file: .env
+    environment:
+      WORDPRESS_DB_HOST: database:3306 
+      WORDPRESS_DB_NAME: '${MYSQL_DATABASE}'
+      WORDPRESS_DB_USER: '${MYSQL_USER}'
+      WORDPRESS_DB_PASSWORD: '${MYSQL_PASSWORD}'
+    volumes:
+      - ./wordpress:/var/www/html:delegated
+      - ./src/wp-content/plugins/movie-quiz:/var/www/html/wp-content/plugins/movie-quiz
     networks:
       - internal
