--- a/compose.yml
+++ b/compose.yml
@@ -1,5 +1,6 @@
 networks:
   internal:
+    driver: bridge
 
 services:
   nginx:
@@ -11,6 +12,7 @@ services:
       - "8088:80"
     volumes:
       - ./wordpress:/var/www/html:delegated
+      - ./src/wp-content/plugins/${PLUGIN_NAME}:/var/www/html/wp-content/plugins/${PLUGIN_NAME}:delegated
       - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
       - ./nginx/logs:/var/log/nginx
     depends_on:
@@ -38,21 +40,6 @@ services:
     networks:
       - internal
 
-  phpmyadmin:
-    container_name: ${CONTAINER_NAME}-phpmyadmin
-    image: phpmyadmin/phpmyadmin
-    env_file: .env
-    depends_on:
-      - database
-    environment:
-      PMA_HOST: database
-      PMA_PORT: 3306
-      MYSQL_ROOT_PASSWORD: "${MYSQL_ROOT_PASSWORD}"
-    ports:
-      - "8081:80"
-    networks:
-      - internal
-
   wordpress:
     depends_on:
       - database
@@ -67,6 +54,19 @@ services:
       WORDPRESS_DB_PASSWORD: '${MYSQL_PASSWORD}'
     volumes:
       - ./wordpress:/var/www/html:delegated
-      - ./src/wp-content/plugins/movie-quiz:/var/www/html/wp-content/plugins/movie-quiz
+      - ./src/wp-content/plugins/${PLUGIN_NAME}:/var/www/html/wp-content/plugins/${PLUGIN_NAME}:delegated
+    networks:
+      - internal
+
+  composer:
+    image: composer:latest
+    container_name: ${CONTAINER_NAME}-composer
+    env_file: .env
+    depends_on:
+      - wordpress
+    volumes:
+      - ./src/wp-content/plugins/${PLUGIN_NAME}:/app:delegated
+      - ./wordpress:/var/www/html:delegated
+    working_dir: /app
     networks:
       - internal
